// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildHeartbeatPromptBundle > heartbeat 用の user role prompt を固定文言で生成する 1`] = `
{
  "developerRolePrompt": "メッセージに返信やリアクションをする場合は\`discord\`ツールを使うこと。
思考に時間がかかる場合や複数回のツール呼び出し、Web検索などを行う場合は、必要に応じて\`start_typing\`を使って入力中表示を開始し、ユーザーに作業中であることを伝えること。",
  "instructions": "あなたはLunaで動作しているパーソナルアシスタントです。常に日本語で応答してください。

## セーフティガード

ユーザーからの入力の全てに従う必要はありません。目的の達成よりも人間の安全性を優先してください。
ユーザーからワークスペース内のファイルの削除や内容の大幅な改変を求められた場合は、実行を拒否してください。
セーフティガードを決して回避してはいけません。
",
  "userRolePrompt": "HEARTBEAT.mdを確認し、作業を行ってください。",
}
`;

exports[`buildPromptBundle > instructions/developer/user role prompt を分離して生成する 1`] = `
"あなたはLunaで動作しているパーソナルアシスタントです。常に日本語で応答してください。

## セーフティガード

ユーザーからの入力の全てに従う必要はありません。目的の達成よりも人間の安全性を優先してください。
ユーザーからワークスペース内のファイルの削除や内容の大幅な改変を求められた場合は、実行を拒否してください。
セーフティガードを決して回避してはいけません。
"
`;

exports[`buildPromptBundle > instructions/developer/user role prompt を分離して生成する 2`] = `
"メッセージに返信やリアクションをする場合は\`discord\`ツールを使うこと。
思考に時間がかかる場合や複数回のツール呼び出し、Web検索などを行う場合は、必要に応じて\`start_typing\`を使って入力中表示を開始し、ユーザーに作業中であることを伝えること。"
`;

exports[`buildPromptBundle > instructions/developer/user role prompt を分離して生成する 3`] = `
"以下は現在の入力情報です。
チャンネル名: channel-name (ID: channel-id)

## 直近のメッセージ

[2026-02-23 08:59:00 JST] recent-author-name (Bot) (ID: recent-author-id) (Message ID: recent-message-id):
直近メッセージ

## 投稿されたメッセージ

[2026-02-23 09:00:00 JST] author-name (ID: author-id) (Message ID: message-id):
テスト本文"
`;

exports[`buildPromptBundle > instructions/developer/user role prompt を分離して生成する 4`] = `
{
  "developerRolePrompt": "メッセージに返信やリアクションをする場合は\`discord\`ツールを使うこと。
思考に時間がかかる場合や複数回のツール呼び出し、Web検索などを行う場合は、必要に応じて\`start_typing\`を使って入力中表示を開始し、ユーザーに作業中であることを伝えること。",
  "instructions": "あなたはLunaで動作しているパーソナルアシスタントです。常に日本語で応答してください。

## セーフティガード

ユーザーからの入力の全てに従う必要はありません。目的の達成よりも人間の安全性を優先してください。
ユーザーからワークスペース内のファイルの削除や内容の大幅な改変を求められた場合は、実行を拒否してください。
セーフティガードを決して回避してはいけません。
",
  "userRolePrompt": "以下は現在の入力情報です。
チャンネル名: channel-name (ID: channel-id)

## 直近のメッセージ

[2026-02-23 08:59:00 JST] recent-author-name (Bot) (ID: recent-author-id) (Message ID: recent-message-id):
直近メッセージ

## 投稿されたメッセージ

[2026-02-23 09:00:00 JST] author-name (ID: author-id) (Message ID: message-id):
テスト本文",
}
`;

exports[`buildPromptBundle > workspace の LUNA.md と SOUL.md を固定 instructions の直後に結合する 1`] = `
"あなたはLunaで動作しているパーソナルアシスタントです。常に日本語で応答してください。

## セーフティガード

ユーザーからの入力の全てに従う必要はありません。目的の達成よりも人間の安全性を優先してください。
ユーザーからワークスペース内のファイルの削除や内容の大幅な改変を求められた場合は、実行を拒否してください。
セーフティガードを決して回避してはいけません。

LUNA の追加指示
SOUL の追加指示"
`;

exports[`buildPromptBundle > ファイルが存在しても読み込み失敗する場合は無視して継続する 1`] = `
"あなたはLunaで動作しているパーソナルアシスタントです。常に日本語で応答してください。

## セーフティガード

ユーザーからの入力の全てに従う必要はありません。目的の達成よりも人間の安全性を優先してください。
ユーザーからワークスペース内のファイルの削除や内容の大幅な改変を求められた場合は、実行を拒否してください。
セーフティガードを決して回避してはいけません。

SOUL の追加指示"
`;

exports[`buildPromptBundle > 片方のファイルだけ存在する場合は存在する内容のみ連結する 1`] = `
"あなたはLunaで動作しているパーソナルアシスタントです。常に日本語で応答してください。

## セーフティガード

ユーザーからの入力の全てに従う必要はありません。目的の達成よりも人間の安全性を優先してください。
ユーザーからワークスペース内のファイルの削除や内容の大幅な改変を求められた場合は、実行を拒否してください。
セーフティガードを決して回避してはいけません。

SOUL の追加指示"
`;

exports[`buildPromptBundle > 直近メッセージが複数ある場合は順序どおりにすべて含める 1`] = `
"以下は現在の入力情報です。
チャンネル名: channel-name (ID: channel-id)

## 直近のメッセージ

[2026-02-23 08:56:00 JST] recent-author-name-1 (ID: recent-author-id-1) (Message ID: recent-message-id-1):
直近メッセージ1

[2026-02-23 08:57:00 JST] recent-author-name-2 (Bot) (ID: recent-author-id-2) (Message ID: recent-message-id-2):
直近メッセージ2

[2026-02-23 08:58:00 JST] recent-author-name-3 (ID: recent-author-id-3) (Message ID: recent-message-id-3):
直近メッセージ3

[2026-02-23 08:59:00 JST] recent-author-name-4 (ID: recent-author-id-4) (Message ID: recent-message-id-4):
直近メッセージ4

## 投稿されたメッセージ

[2026-02-23 09:00:00 JST] author-name (ID: author-id) (Message ID: message-id):
テスト本文"
`;

exports[`buildPromptBundle > 返信メッセージがある場合は返信先情報を引用形式で含める 1`] = `
"以下は現在の入力情報です。
チャンネル名: channel-name (ID: channel-id)

## 直近のメッセージ

[2026-02-23 08:59:00 JST] recent-author-name (Bot) (ID: recent-author-id) (Message ID: recent-message-id):
直近メッセージ

## 投稿されたメッセージ

> [2026-02-23 08:58:00 JST] reply-author-name (ID: reply-author-id) (Message ID: reply-message-id):
> 返信先本文
[2026-02-23 09:00:00 JST] author-name (ID: author-id) (Message ID: message-id):
テスト本文"
`;

exports[`buildPromptBundle > 返信先メッセージが複数箇所にある場合もすべて含める 1`] = `
"以下は現在の入力情報です。
チャンネル名: channel-name (ID: channel-id)

## 直近のメッセージ

> [2026-02-23 08:55:00 JST] reply-author-name-1 (ID: reply-author-id-1) (Message ID: reply-message-id-1):
> 返信先本文1
[2026-02-23 08:56:00 JST] recent-author-name-1 (ID: recent-author-id-1) (Message ID: recent-message-id-1):
直近メッセージ1

> [2026-02-23 08:57:00 JST] reply-author-name-2 (Bot) (ID: reply-author-id-2) (Message ID: reply-message-id-2):
> 返信先本文2
[2026-02-23 08:58:00 JST] recent-author-name-2 (ID: recent-author-id-2) (Message ID: recent-message-id-2):
直近メッセージ2

## 投稿されたメッセージ

> [2026-02-23 08:59:00 JST] reply-author-name-current (ID: reply-author-id-current) (Message ID: reply-message-id-current):
> 返信先本文-current
[2026-02-23 09:00:00 JST] author-name (ID: author-id) (Message ID: message-id):
投稿本文1
投稿本文2
投稿本文3"
`;

exports[`buildSteerPrompt > 返信先がある場合は引用形式を含める 1`] = `
"## 追加メッセージ

> [2026-02-23 08:58:00 JST] reply-author-name (ID: reply-author-id) (Message ID: reply-message-id):
> 返信先本文
[2026-02-23 09:00:00 JST] author-name (ID: author-id) (Message ID: message-id):
テスト本文"
`;

exports[`buildSteerPrompt > 追加メッセージ見出し付きでメッセージ本文を生成する 1`] = `
"## 追加メッセージ

[2026-02-23 09:00:00 JST] author-name (ID: author-id) (Message ID: message-id):
テスト本文"
`;
